modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/verify-image-signature/constraints/policy_1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8VerifyImageSignatures
metadata:
  name: verify-image-signature-policy
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups: ["" ]
      kinds: ["Pod"]
    scope: Namespaced
  parameters:
    references:
    - ".*"
    # For CI/Gator tests: use inventory ExternalDataInventory mock instead of runtime external_data call.
    isTest: true
