modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/verify-image-signature/rendered/test_samples/external-data/002-negative-image-reference-external-data.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: deckhouse.io/v1alpha1
kind: ExternalDataInventory
metadata:
    name: default
    namespace: testns
spec:
    providers:
        ratify-provider:
            errors: []
            responses:
                busybox:latest:
                    isSuccess: true
                nginx:latest:
                    isSuccess: true
                registry.invalid.local/unsigned/nginx:latest:
                    isSuccess: false
            system_error: ""
