modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/verify-image-signature/rendered/test_samples/pods/001-allowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: example
    namespace: testns
spec:
    containers:
        - image: nginx:latest
          name: nginx
