modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/verify-image-signature/rendered/test_samples/pods/002-negative-image-reference.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: negative-image-reference
    namespace: testns
spec:
    containers:
        - image: registry.invalid.local/unsigned/nginx:latest
          name: nginx
