modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/verify-image-signature/rendered/test_samples/pods/003-init-container-image.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: init-container-image
    namespace: testns
spec:
    containers:
        - image: nginx:latest
          name: nginx
    initContainers:
        - image: nginx:latest
          name: init-nginx
