modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/verify-image-signature/rendered/test_samples/pods/005-ephemeral-container-image.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: ephemeral-container-image
    namespace: testns
spec:
    containers:
        - image: nginx:latest
          name: nginx
    ephemeralContainers:
        - image: busybox:latest
          name: debugger
