modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/verify-image-signature/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: verify-image-signature
tests:
  - name: security-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: allowed
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/external-data/001-allowed-external-data.yaml
        object: test_samples/pods/001-allowed.yaml
        assertions:
          - violations: "no"
      - name: negative-image-reference
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/external-data/002-negative-image-reference-external-data.yaml
        object: test_samples/pods/002-negative-image-reference.yaml
        assertions:
          - violations: "yes"
      - name: init-container-image
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/external-data/001-allowed-external-data.yaml
        object: test_samples/pods/003-init-container-image.yaml
        assertions:
          - violations: "no"
      - name: multi-container-images
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/external-data/001-allowed-external-data.yaml
        object: test_samples/pods/004-multi-container-images.yaml
        assertions:
          - violations: "no"
      - name: ephemeral-container-image
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/external-data/005-ephemeral-container-image-external-data.yaml
        object: test_samples/pods/005-ephemeral-container-image.yaml
        assertions:
          - violations: "yes"
